Implemented background morph transition, the transition type selection in the project between scenes is now used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ add_executable(${EXECUTABLE_NAME}
         Game/Include/VisualNovelEngine/Classes/UI/NovelTextDisplay.hpp
         Game/Include/VisualNovelEngine/Screens/NovelScreen.hpp
         Game/Include/VisualNovelEngine/NovelScreenClasses.hpp
+        Game/Include/VisualNovelEngine/Classes/Data/VisualNovelEngineConstants.hpp
         Game/Src/BackgroundRenderer/BackgroundImageRenderer.cpp
         Game/Src/BackgroundRenderer/BackgroundTransition.cpp
         Game/Src/BackgroundRenderer/BackgroundTransitionHandler.cpp
@@ -134,7 +135,8 @@ add_executable(${EXECUTABLE_NAME}
         Game/Src/VisualNovelEngine/Classes/UI/CharacterSpriteSlot.cpp
         Game/Src/VisualNovelEngine/Classes/UI/NovelTextDisplay.cpp
         Game/Src/VisualNovelEngine/Screens/NovelScreen.cpp
-        Game/Src/EntryPoint.cpp Game/Src/BackgroundRenderer/BackgroundOverlay.cpp)
+        Game/Src/EntryPoint.cpp
+        Game/Src/BackgroundRenderer/BackgroundOverlay.cpp)
 
 add_executable(${COMPILER_EXECUTABLE_NAME}
         Game/Include/Misc/ProjectInfo.hpp
@@ -158,7 +160,7 @@ add_executable(${COMPILER_EXECUTABLE_NAME}
         Game/Src/GameCompiler/ProjectBuilder.cpp
         Game/Src/GameCompiler/ResourceBuilder.cpp
         Game/Src/Misc/Utils.cpp
-        Game/Src/GameCompilerEntryPoint.cpp)
+        Game/Src/GameCompilerEntryPoint.cpp Game/Include/VisualNovelEngine/Classes/Data/VisualNovelEngineConstants.hpp)
 
 find_package(SFML 2.5.1 REQUIRED audio graphics window system )
 
